monitoring/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: task-tracking-app
    app.kubernetes.io/component: monitoring
